# twitterclone

./: .gitignore  README.md  pyproject.toml
authentication/: forms.py  views.py
notification/: admin.py  models.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20200904_1130.py  0003_auto_20200904_1412.py
static/: index.css
templates/: index.html  login_form.html  new_tweet_view.html  notifications_view.html  signup_form.html  tweet_view.html  user_view.html
templates/includes/: index_feed.html  navbar.html  notification_detail.html  panel.html  tweet_detail.html  user_feed.html
tweet/: admin.py  forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_author.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py
