[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = ""
authors = ["Edwin Torres <edwin_torres@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
